<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cnb_unselectedColor="#666">
    <item
        android:id="@+id/home_menu"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:cnb_iconColor="@color/home"/>
    <item
        android:id="@+id/search_menu"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:cnb_iconColor="@color/search"/>
    <item
        android:id="@+id/favorites_menu"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorites"
        app:cnb_iconColor="@color/favorite" />
    <item
        android:id="@+id/profile_menu"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        app:cnb_iconColor="@color/profile" />
</menu>