<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <View
        android:id="@+id/hero"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@drawable/background_profile" />

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:text="@string/profile"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_below="@id/header"
        android:layout_centerHorizontal="true"
        app:cardCornerRadius="100dp"
        app:cardElevation="3.1dp">

        <ImageView
            android:id="@+id/image_profile"
            android:layout_width="106dp"
            android:layout_height="106dp"
            android:layout_gravity="center"
            android:contentDescription="@string/image_description" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/hero"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="-45dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/name"
                android:textColor="@color/dark"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:text="@string/email"
                android:textColor="@color/dark_grey"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="16dp"
                android:text="@string/intro"
                android:textAlignment="center"
                android:textColor="@color/dark"
                android:textSize="14sp" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_favorite"
        android:layout_width="210dp"
        android:layout_height="65dp"
        android:layout_below="@id/card_profile"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="60dp"
        android:layout_marginVertical="24dp"
        android:elevation="0dp"
        android:text="@string/favorite_food"
        android:textAllCaps="false"
        android:textColor="@color/button"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="@android:color/white"
        app:cornerRadius="25dp"
        app:elevation="0dp"
        app:strokeColor="@color/button"
        app:strokeWidth="1dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/made_with"
            android:gravity="center"
            android:textColor="@color/dark"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginHorizontal="4dp"
            android:src="@drawable/heart"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by_azmirf20"
            android:gravity="center"
            android:textColor="@color/dark"
            android:textSize="16sp" />

    </LinearLayout>
</RelativeLayout>